<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_2">
    <LinearLayout
        android:id="@+id/login_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/home_flash"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:text="@string/lg_title_1"
            android:textSize="20dp"
            android:textColor="#CD853F"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lg_txt_title_1"
            android:text="Đăng Nhập"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/background_main"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/lg_edt_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text_hint"
            android:hint="@string/lg_hint_username"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/shape_text"
            android:maxLength="50"
            android:gravity="center"/>
        <EditText
            android:id="@+id/lg_edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text_hint"
            android:hint="@string/lg_hint_password"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/shape_text"
            android:maxLength="20"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_quen_matkhau"
            android:text="@string/quen_mat_khau"
            android:textColor="@color/background_main"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            />
        <Button
            android:id="@+id/lg_btn_login"
            android:text="@string/lg_title_btn_xacnhan"
            android:textSize="20dp"
            android:textColor="@color/splash_background"
            android:background="@drawable/shape_login"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="125dp"/>
        <TextView
            android:id="@+id/lg_txt_dangky"
            android:clickable="true"
            android:text="@string/title_dangky"
            android:maxEms="10"
            android:gravity="center"
            android:textColor="@color/background_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:onClick="goSignUp"
            android:layout_marginTop="20dp"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/lg_btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/lg_btn_login_google"
                android:background="@drawable/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp" />
            <ImageView
                android:background="@color/text"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"/>
            <ImageButton
                android:id="@+id/lg_btn_login_twitter"
                android:background="@drawable/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

