<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_2">
    <TextView
        android:text="@string/dk_title_1"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/background_main"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:id="@+id/dk_img"
        android:src="@drawable/person_main"
        android:background="@color/splash_background"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">
    </ImageView>
    <TextView
        android:text="Họ và tên (*)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="17dp"
        android:textColor="@color/background_main"/>
    <EditText
        android:id="@+id/dk_edt_fullname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/text"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_text"
        android:maxLength="20"
        android:gravity="center"/>
    <TextView
        android:text="Tên tài khoản (*)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="17dp"
        android:textColor="@color/background_main"/>
    <TextView
        android:text="(Nên sử dụng tên gmail của bạn)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="17dp"
        android:textColor="@color/background_main"/>
    <EditText
        android:id="@+id/dk_edt_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="example@gmail.com"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_text"
        android:maxLength="50"
        android:gravity="center"/>
    <TextView
        android:text="Mật khẩu (*)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="17dp"
        android:textColor="@color/background_main"/>
    <EditText
        android:id="@+id/dk_edt_pass1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint"
        android:hint="@string/signup_title_pass"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_text"
        android:maxLength="20"
        android:inputType="textPassword"
        android:gravity="center"/>
    <TextView
        android:text="Xác nhận mật khẩu (*)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="17dp"
        android:textColor="@color/background_main"/>
    <EditText
        android:id="@+id/dk_edt_pass2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint"
        android:hint="@string/signup_title_pass_2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_text"
        android:maxLength="20"
        android:gravity="center"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/dk_btn_login"
        android:text="Đăng ký"
        android:textSize="20dp"
        android:textColor="@color/splash_background"
        android:background="@drawable/shape_login"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="125dp"/>
</LinearLayout>