<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_main_2">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:minHeight="?attr/actionBarSize" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/detail_btn_back"
                        android:background="@drawable/back_32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/detail_txt_title_parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textSize="20dp"
                        android:textColor="@color/background_main_2"
                        android:layout_marginTop="3dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/detail_txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bài viết"
                        android:textColor="@color/background_main_2"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:layout_marginTop="3dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">
                        <ImageButton
                            android:id="@+id/detail_btn_danduong"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/map_marker"
                            android:layout_marginRight="10dp"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            custom:pager_animation="Accordion"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation_span="1100"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"/>

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            custom:selected_color="#0095BF"
            custom:unselected_color="#55333333"
            custom:shape="oval"
            custom:selected_padding_left="5dp"
            custom:selected_padding_right="5dp"
            custom:unselected_padding_left="5dp"
            custom:unselected_padding_right="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            custom:selected_width="6dp"
            custom:selected_height="6dp"
            custom:unselected_width="6dp"
            custom:unselected_height="6dp"
            />
        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator2"
            style="@style/AndroidImageSlider_Corner_Oval_Orange"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/like_32"
                android:layout_marginLeft="15dp"/>
            <LinearLayout
                android:layout_weight="6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/coins_32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/detail_txt_price"
                    android:text="7.000.000 VNĐ"
                    android:layout_width="wrap_content"
                    android:textSize="25dp"
                    android:gravity="center"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/detail_btn_call"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:background="@drawable/phone_32"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <TextView
            android:text="Thông tin chi tiết"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/background_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <TextView
                android:text="@string/detail__title_diachi"
                android:textSize="18dp"
                android:textColor="@color/background_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/detail_txt_diachi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/text_black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <TextView
                android:text="@string/detail_title_dientich"
                android:textSize="18dp"
                android:textColor="@color/background_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/detail_txt_dientich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/text_black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <TextView
                android:text="@string/detail_title_lienhe"
                android:textSize="18dp"
                android:textColor="@color/background_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/detail_txt_lienhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/text_black"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <TextView
                android:text="@string/detail_title_mota"
                android:textSize="18dp"
                android:textColor="@color/background_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/detail_txt_mota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/text_black"
                android:padding="5dp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
